--- a/app/src/main/res/layout/activity_purpose.xml
+++ b/app/src/main/res/layout/activity_purpose.xml
@@ -26,12 +26,13 @@
         android:textColor="#ffffff"
         android:padding="10dp"
         android:background="@color/colorAccent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:onClick="getPurpose"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title_purpose"/>
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/purpose"/>
