--- a/app/src/main/res/layout/activity_res_loc.xml
+++ b/app/src/main/res/layout/activity_res_loc.xml
@@ -12,6 +12,25 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="10"
+        android:paddingBottom="5dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:id="@+id/no"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:text="instances required"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="#FF4081"
         android:weightSum="193">
@@ -30,6 +49,7 @@
             android:text="Source ID"
             android:textColor="#ffffff"
             android:textSize="15dp"
+
 
             />
 
